--- a/index.css
+++ b/index.css
@@ -15,10 +15,15 @@ input {
 
 button {
   background: #5f9341;
+  border: 1px solid #5f9341;
   color: #fff;
   padding: 10px 20px;
-  border: none;
   font-weight: bold;
+}
+
+#delete-btn {
+  background-color: #fff;
+  color: #5f9341;
 }
 
 ul {
